# simd

./: .appveyor.yml  .clang-format  CHANGELOG  CMakeLists.txt  CONTRIBUTING  COPYRIGHT  README.md  formatter  simd.pc.in
doc/: Makefile  (+3 more)
src/: CMakeLists.txt
src/bigmath/simd/: capabilities.h  config.h  deprecations.h  expr.h  expr.inl  instrset.h  instrset_detect.cpp  instrset_detect.h  setup_arch.h  simd.h  this_compile_arch.h  types.h  vectorf128.h  vectorf256.h  vectorf256e.h  vectorf512.h  vectorf512e.h  vectori128.h  vectori256.h  vectori256e.h  vectori512.h  vectori512e.h  vectorsimd.h  version.h
src/bigmath/simd/core/: align.h  aligned_allocator.h  bit_and.h  bit_andnot.h  bit_not.h  bit_or.h  bit_xor.h  blend.h  cache.h  cast.h  cmp_eq.h  cmp_ge.h  cmp_gt.h  cmp_le.h  cmp_lt.h  cmp_neq.h  combine.h  extract.h  extract_bits.h  f_abs.h  f_add.h  f_ceil.h  f_div.h  f_floor.h  f_fmadd.h  f_fmsub.h  f_isnan.h  f_isnan2.h  f_max.h  f_min.h  f_mul.h  f_neg.h  f_rcp_e.h  f_rcp_rh.h  f_reduce_add.h  f_reduce_max.h  f_reduce_min.h  f_reduce_mul.h  f_rsqrt_e.h  f_rsqrt_rh.h  (+77 more)
src/bigmath/simd/core/detail/: get_expr_bitwise.h  get_expr_uint.h  scalar_arg_impl.h  subvec_extract.h  subvec_insert.h
src/bigmath/simd/detail/: align.h  align_v128.h  array.h  cast.h  cast.inl  cast_bitwise.h  construct_eval.h  eval_scalar.h  extract128.h  for_each.h  get_expr.h  insn_id.h  mem_block.h  not_implemented.h  preprocess_single_arch.h  preprocessor.h  traits.h  vector_array_conv_macros.h  vector_array_macros.h  width.h  workarounds.h
src/bigmath/simd/detail/altivec/: load1.h
src/bigmath/simd/detail/expr/: bit_and.h  bit_andnot.h  bit_not.h  bit_or.h  blend.h  f_abs.h  f_add.h  f_fmadd.h  f_fmsub.h  f_mul.h  f_neg.h  f_sub.h  i_abs.h  i_add.h  i_add_sat.h  i_mul.h  i_mull.h  i_neg.h  i_sub.h  i_sub_sat.h  scalar.h  splat_n.h  test_bits.h  vec.h
src/bigmath/simd/detail/insn/: align.h  bit_and.h  bit_andnot.h  bit_not.h  bit_or.h  bit_xor.h  blend.h  cmp_eq.h  cmp_ge.h  cmp_gt.h  cmp_le.h  cmp_lt.h  cmp_neq.h  combine.h  conv_any_to_float32.h  conv_any_to_float64.h  conv_extend_to_int16.h  conv_extend_to_int32.h  conv_extend_to_int64.h  conv_float_to_int16.h  conv_float_to_int32.h  conv_float_to_int64.h  conv_float_to_int8.h  conv_shrink_to_int16.h  conv_shrink_to_int32.h  conv_shrink_to_int8.h  conv_to_mask.h  conv_to_mask.inl  extract.h  extract_bits.h  f_abs.h  f_add.h  f_ceil.h  f_div.h  f_floor.h  f_fmadd.h  f_fmsub.h  f_isnan.h  f_isnan2.h  f_max.h  (+83 more)
src/bigmath/simd/detail/neon/: math_int.h  memory_store.h  shuffle.h
src/bigmath/simd/detail/null/: bitwise.h  compare.h  mask.h  math.h  memory.h  set.h  shuffle.h  transpose.h
src/bigmath/simd/detail/preprocessor/: cat.hpp  stringize.hpp
src/bigmath/simd/detail/preprocessor/arithmetic/: dec.hpp  inc.hpp
src/bigmath/simd/detail/preprocessor/config/: config.hpp
src/bigmath/simd/detail/preprocessor/control/: expr_if.hpp  expr_iif.hpp  if.hpp  iif.hpp
src/bigmath/simd/detail/preprocessor/debug/: error.hpp
src/bigmath/simd/detail/preprocessor/detail/: auto_rec.hpp  split.hpp
src/bigmath/simd/detail/preprocessor/facilities/: empty.hpp  expand.hpp  identity.hpp  is_1.hpp  is_empty.hpp  is_empty_variadic.hpp  overload.hpp
src/bigmath/simd/detail/preprocessor/facilities/detail/: is_empty.hpp
src/bigmath/simd/detail/preprocessor/logical/: bool.hpp  compl.hpp
src/bigmath/simd/detail/preprocessor/punctuation/: comma.hpp  comma_if.hpp  is_begin_parens.hpp  remove_parens.hpp
src/bigmath/simd/detail/preprocessor/punctuation/detail/: is_begin_parens.hpp
src/bigmath/simd/detail/preprocessor/repetition/: for.hpp
src/bigmath/simd/detail/preprocessor/repetition/detail/: for.hpp
src/bigmath/simd/detail/preprocessor/repetition/detail/msvc/: for.hpp
src/bigmath/simd/detail/preprocessor/seq/: elem.hpp  for_each.hpp  for_each_i.hpp  seq.hpp  size.hpp
src/bigmath/simd/detail/preprocessor/seq/detail/: is_empty.hpp
src/bigmath/simd/detail/preprocessor/tuple/: eat.hpp  elem.hpp  enum.hpp  rem.hpp  size.hpp  to_seq.hpp
src/bigmath/simd/detail/preprocessor/tuple/detail/: is_single_return.hpp
src/bigmath/simd/detail/preprocessor/variadic/: elem.hpp  size.hpp  to_seq.hpp
src/bigmath/simd/detail/shuffle/: neon_int16x8.h  neon_int32x4.h  neon_int64x2.h  shuffle_mask.h  sse_float32_4x2.h  sse_float64_4x2.h  sse_int32_4x2.h  sse_int64_4x2.h
src/bigmath/simd/dispatch/: arch.h  collect_macros_generated.h  dispatcher.h  get_arch_gcc_builtin_cpu_supports.h  get_arch_linux_cpuinfo.h  get_arch_raw_cpuid.h  get_arch_string_list.h  macros_generated.h  make_dispatcher.h  preprocess_single_compile_arch.h
src/bigmath/simd/math/: common.h  exp.h  hyp.h  lib.h  trig.h
src/bigmath/simd/operators/: bit_and.h  bit_not.h  bit_or.h  bit_xor.h  cmp_eq.h  cmp_ge.h  cmp_gt.h  cmp_le.h  cmp_lt.h  cmp_neq.h  f_add.h  f_div.h  f_mul.h  f_sub.h  i_add.h  i_mul.h  i_shift_l.h  i_shift_r.h  i_sub.h
src/bigmath/simd/special/: complexvec.h  decimal.h  quaternion.h  ranvec1.cpp  ranvec1.h  vector3d.h
src/bigmath/simd/types/: any.h  empty_expr.h  float32.h  float32x16.h  float32x4.h  float32x8.h  float64.h  float64x2.h  float64x4.h  float64x8.h  fwd.h  generic.h  int16.h  int16x16.h  int16x32.h  int16x8.h  int32.h  int32x16.h  int32x4.h  int32x8.h  int64.h  int64x2.h  int64x4.h  int64x8.h  int8.h  int8x16.h  int8x32.h  int8x64.h  tag.h  traits.h
tests/: CMakeLists.txt  dispatch_example.cc  main_dispatcher.cc  main_expr.cc  main_insn.cc
tests/common/: masks.h  sel_vectors.h  vectors.h
tests/compile_fail/: CMakeLists.txt
tests/dispatcher/: dispatcher.cc  dispatcher.h
tests/expr/: bitwise.cc  compare.cc  math_float.cc  math_int.cc  tests.cc  tests.h
tests/insn/: bitwise.cc  blend.cc  compare.cc  construct.cc  convert.cc  for_each.cc  math_fp.cc  math_int.cc  math_shift.cc  memory_load.cc  memory_store.cc  permute_generic.cc  shuffle.cc  shuffle_bytes.cc  shuffle_generic.cc  test_utils.cc  tests.cc  tests.h  transpose.cc
tests/utils/: element_type.h  test_helpers.h  test_reporter.h  test_results.h  test_results_set.cc  test_results_set.h
(+451 files in other folders)
